# VidAgent

./: README.md
backend/: .env.docker  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test.py
backend/alembic/: env.py
backend/alembic/versions/: 19b54e3a8d44_removed_the_username_column_from_the_.py  1b6e40c7ff3b_initial_db_setup.py  23774f0de7a7_added_indexes_in_chats_and_questions_.py  4abb73133b00_fixed_type_hint.py  a2115fafd823_fixed_created_at_column_to_not_put_null_.py  a2d7a8bd9d16_changed_datatype_to_text.py
backend/migrations/: env.py
backend/migrations/versions/: 5720f047e082_some_changes.py  712c0ac25c6e_new_enum_structure.py  a82a0210dc37_initial.py
backend/src/: __init__.py  app_responses.py  config.py  logging_config.py  mail_service.py  utils.py
backend/src/ai/: agent.py  agent_notebook.ipynb  chat_models.py  components.py  exceptions.py  orchestrator.py  pinecone_vdb.py  prompts.py  utils.py  youtube.py
backend/src/ai/pinecone_vector_db/: youtube_chunks.py
backend/src/ai/youtube/: transcript_preprocessor.py  video_loader.py
backend/src/auth/: dependencies.py  exceptions.py  models.py  oauth_google.py  routes.py  schemas.py  services.py  utils.py
backend/src/chats/: exceptions.py  models.py  routes.py  schemas.py  services.py
backend/src/db/: main.py  postgres_db.py  redis_db.py
backend/src/db/postgres/: setup.py  (+1 more)
backend/src/jobs/: config.py  utils.py  video_workflows.py
backend/src/services/: inngest_client.py
backend/src/templates/: main.py  verify_email.html  welcome.html
backend/test/: yt.py
(+114 files in other folders)
